# treesitter-tools

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRACT.md  README.md  debug_ast.py  debug_doc_comments.py  debug_java.py  generate_expected.py  pyproject.toml  test_docstring.py
benchmarks/: bench_large_repos.py
docs/: COPILOT_REVIEW_REQUEST_EXAMPLE.md  HAPPYPATH_GUIDE_DEVOPS.md  scratch.md
src/treesitter_tools/: __init__.py  api.py  cli.py  core.py
tests/: test_artifacts.py  test_chunking.py  test_cli.py  test_content.py  test_contract.py  test_core.py  test_docstrings.py  test_examples.py  test_reliability.py
tests/artifacts/: junk.txt  junk.txt.expected.json  sample_complex.c  sample_complex.c.expected.json  sample_complex.go  sample_complex.go.expected.json  sample_complex.py  sample_complex.rs  sample_complex.rs.expected.json  sample_react.jsx
tests/expected/: sample_complex.c.json  sample_complex.py.json  sample_react.jsx.json
