[project]
name = "treesitter-tools"
version = "0.1.0"
description = "Tree-sitter CLI helpers for local code inspection"
authors = [{ name = "Experiments Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "tree-sitter>=0.21",
  "tree-sitter-language-pack>=0.2.1",
]

[project.scripts]
"treesitter-tools" = "treesitter_tools.cli:app"

[tool.uv]
dev-dependencies = [
  "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
